--- a/src/pages/posts/百姓苦.md
+++ b/src/pages/posts/百姓苦.md
@@ -12,6 +12,6 @@ description: 妖怪吃人，为啥不吃老百姓？百姓苦...
 
 一个妖怪在城中吃人，只吃富豪而不吃普通百姓。
 
-吃了一段时间，全城都知道有这么一个妖怪，于是有大胆的人上去问，富豪有这么点，你为何不吃百姓？
+吃了一段时间，全城都知道有这么一个妖怪，于是有大胆的人上去问，“富豪就这么点儿人，你为何不吃百姓？”
 
-妖怪答：百姓苦
+妖怪说：“因为百姓苦啊”
